--- a/dev/css/sakai/sakai.corev1.css
+++ b/dev/css/sakai/sakai.corev1.css
@@ -1,22 +1,22 @@
-.s3d-page-column-left{float:left;width:185px;min-height:400px;border-top:solid #d6dadd 1px; background:url("/devwidgets/lhnavigation/images/lhnav_bg.png") repeat-x scroll 0 0 #FEFEFE;}
-.s3d-page-column-right{float:left;width:750px;border-top:solid #d6dadd 1px;border-left: 1px solid #B3B3B4;padding:12px;box-shadow: 3px -10px 7px 0;-moz-box-shadow: 3px -10px 7px 0;-webkit-box-shadow: 3px -10px 7px 0;}
-.s3d-page-fullcolumn-nopadding{width:960px;min-height:100px;border-top:solid #d6dadd 1px;}
+.s3d-page-column-left{float:left;width:194px;min-height:400px;border-top:solid #d6dadd 1px;background:url("/devwidgets/lhnavigation/images/lhnav_bg.png") repeat-x scroll 0 0 #FEFEFE;}
+.s3d-page-column-right{float:left;width:732px;border-top:solid #d6dadd 1px;padding:22px;box-shadow: 3px -10px 7px 0;-moz-box-shadow: 3px -10px 7px 0;-webkit-box-shadow: 3px -10px 7px 0;}
+.s3d-page-fullcolumn-nopadding{width:970px;min-height:100px;border-top:solid #d6dadd 1px;}
 .s3d-page-fullcolumn-padding{width:920px;min-height:100px;border-top:solid #d6dadd 1px; padding: 20px 20px 30px;}
 .s3d-page-content-padding{padding: 10px 0px 20px;}
 .s3d-page-content-lowpadding{padding: 0px 0px 20px;}
 .s3d-page-full{height:100px;}
 .s3d-navigation-container{background: url("/devwidgets/topnavigation/images/topnav_bg.png") repeat-x scroll left top transparent;-moz-box-shadow:0 -5px 9px 6px #555555;-webkit-box-shadow:0 -5px 9px 6px #555555;box-shadow:0 -5px 9px 6px #555555;height: 40px;margin-left: auto;margin-right: auto;position: absolute;width: 100%;z-index: 999;}
 .s3d-page-header{background:url("/devwidgets/entity/images/entity_bottom_bordershadow.png") repeat-x scroll left bottom, url("/devwidgets/entity/images/entity_bg.png") repeat-x scroll left top #E6EBEE;border-bottom: 1px solid #B3B3B4;height: 45px;margin-top: 40px;padding:24px 20px 12px;width: 930px;}
-.s3d-fixed-container .s3d-container-shadow-left, .s3d-container-shadow-right {background: url("/dev/images/container_shadow_left.png") no-repeat scroll 0 0 transparent;height: 346px;margin-left: -5px;position: absolute;width: 5px;}
-.s3d-container-shadow-right{background: url("/dev/images/container_shadow_right.png") no-repeat scroll 0 0 transparent;float: right;margin-left: 960px;}
-.s3d-page-column-right #s3d-page-main-content {padding-left: 10px; padding-right: 10px;}
+.s3d-fixed-container .s3d-container-shadow-left, .s3d-container-shadow-right {background: url("/dev/images/container_shadow_left.png") no-repeat scroll 0 0 transparent;height: 346px;margin-left:-5px;position: absolute;width: 5px;}
+.s3d-container-shadow-right{background: url("/dev/images/container_shadow_right.png") no-repeat scroll 0 0 transparent;float: right;margin-left:970px;}
+.s3d-page-column-right #s3d-page-main-content {}
 
 /* CSS THAT OVERWRITES MAIN CSS */
 .s3d-main-container {padding: 0px !important;}
-.fixed-container.s3d-main-container{width:960px;}
+.fixed-container.s3d-main-container{width:970px;}
 .s3d-twocolumn{background-color:#fff;}
 .requireUser {background: url("/dev/images/grey_bg.png") repeat-x scroll left -91px #f2f2f2 !important;}
-.s3d-header .fixed-container {padding:0 !important; width:960px;}
+.s3d-header .fixed-container {padding:0 !important; width:970px;}
 .s3d-header .s3d-fixed-container .s3d-decor-left {margin-left:0;}
 .s3d-header .s3d-fixed-container .s3d-decor {margin-right:0;}
 .s3d-header .s3d-fixed-container .s3d-decor-left {background: url("/dev/images/pageHeader_tl.png") no-repeat scroll 0 0 transparent;}
