--- a/devwidgets/institutionalskinning/css/institutionalskinning.css
+++ b/devwidgets/institutionalskinning/css/institutionalskinning.css
@@ -15,4 +15,4 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  */
-.institutionalskinning_widget #institutionalskinning_logo {width:100%;height:90px;background:url('/devwidgets/institutionalskinning/images/sakai_default.png') no-repeat;}
+.institutionalskinning_widget #institutionalskinning_logo {width:100%;height:91px;background:url('/devwidgets/institutionalskinning/images/sakai_default.png') no-repeat top left #fff;}
